--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", ".eslintrc.js", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.js"],
+  "exclude": ["node_modules", ".next", ".vercel", "out"]
 }
