--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "copyimages": "node ./bin/copy-images.mjs"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
-    "unified": "^11.0.4"
+    "unified": "^11.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
