--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "copyimages": "node ./bin/copy-images.mjs"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
