--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "quiz",
   "version": "0.1.0",
+  "author": "Bohdan Andrianov",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "predev": "npm run copyimages",
